[tool.poetry]
name = "accent-classifier"
version = "1.0.0"
description = "AI-powered English accent classification system"
authors = ["Hasna Khantouche <hasna.khantouch@ensi-uma.tn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
streamlit = "^1.32.0"
requests = "^2.31.0"
numpy = "^1.26.0"
SpeechRecognition = "^3.10.0"
transformers = "^4.40.0"
librosa = "0.9.2"  
soundfile = "0.12.1"  
audioread = "2.1.9"  
imageio-ffmpeg = "^0.4.9"
torch = { version = "^2.0.0", extras = ["audio"] }
torchaudio = "^2.0.0"
msgpack = "^1.0.0"
soxr = "^0.3.7"
lazy-loader = "^0.4.0"
pydub = "^0.25.1"  # Added for audio fallback support
yt-dlp = "^2025.5.22"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"